--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=iyc.org.tr
 APP_ENV=local
 APP_KEY=your_app_key
-DB_DOMAIN=https://local8.iycv2.com/
+DB_DOMAIN=your_domain
 
 APP_LOCALE=tr
 APP_FALLBACK_LOCALE=tr
@@ -10,9 +10,9 @@ APP_FAKER_LOCALE=tr_TR
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=null
-DB_DATABASE=otoprog
-DB_USERNAME=otomasyon
-DB_PASSWORD=!itX45_p
+DB_DATABASE=db_database
+DB_USERNAME=db_user_name
+DB_PASSWORD=db_password
 
 MEMCACHED_HOST=127.0.0.1
 
